# memengine

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py  worker.py
app/core/: config.py
app/graph/: client.py  dedup.py  persist.py  schema.py  search.py
app/models/: db.py
app/schemas/: memory.py
app/services/extraction/: pipeline.py
migrations/: 001_initial_schema.sql  002_add_company_email.sql  003_add_api_key_encrypted.sql  004_trace_reports.sql  005_drop_agent_config.sql  006_add_pipeline_timing.sql  007_add_graph_fields.sql  008_add_company_password_hash.sql
prompts/: classify.txt  decide.txt  dedup_decide.txt  deduplicate.txt  extract.txt  extract_classify.txt  retrieval_reason.txt  search_rewrite.txt
sdk/: README.md  pyproject.toml  test_sdk.py
sdk/memengine/: __init__.py  client.py  exceptions.py  models.py
