[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memengine-sdk"
version = "0.1.0"
description = "Python SDK for the MemEngine AI memory API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "respx>=0.21"]

[tool.setuptools.packages.find]
where = ["."]
include = ["memengine*"]
